--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@mdx-js/loader": "^1.5.8",
     "@next/mdx": "^9.3.4",
-    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-css": "^1.0.1", 
     "@zeit/next-sass": "^1.0.1",
+    "@zeit/next-source-maps": "^0.0.3",
     "bootstrap": "^4.4.1",
     "next": "9.3.4",
     "next-compose-plugins": "^2.2.0",
+    "next-images": "^1.4.0",
+    "next-optimized-images": "^2.5.7",
     "node-sass": "^4.13.1",
     "react": "16.13.1",
     "react-bootstrap": "^1.0.0",
