--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@mdx-js/loader": "^1.5.8",
     "@next/mdx": "^9.3.4",
-    "@zeit/next-css": "^1.0.1", 
+    "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-source-maps": "^0.0.3",
     "bootstrap": "^4.4.1",
@@ -27,6 +27,7 @@
     "@types/node": "^13.11.1",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
+    "frontmatter-markdown-loader": "^3.3.0",
     "typescript": "^3.8.3"
   }
 }
