--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -3,14 +3,28 @@ backend:
   branch: master
 media_folder: public/img
 public_folder: img
+slug:
+  encoding: 'ascii'
+  clean_accents: true
+  sanitize_replacement: '_'
 collections:
   - name: "pages"
     label: "Pages"
     files:
     - label: "Home"
       name: "home"
-      file: "src/content/pages/Home.md"
+      file: "src/content/pages"
       fields:
         - { label: "Title", name: "title", widget: "string"}
         - { label: "Publish Date", name: "date", widget: "datetime" }
         - { label: "Body", name: "body", widget: "markdown"}
+  - label: 'Posts'
+    name: 'posts'
+    folder: 'src/content/posts'
+    create: true
+    slug: '{{year}}-{{month}}-{{day}}_{{slug}}'
+    fields:
+      - { label: 'Title', name: 'title', widget: 'string', required: true }
+      - { label: 'Publish Date', name: 'date', widget: 'datetime', required: true }
+      - { label: 'Featured Image', name: 'thumbnail', widget: 'image', required: true }
+      - { label: 'Body', name: 'body', widget: 'markdown', required: true }
