--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "export": "npm run build && next export"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.13.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/free-regular-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "@mdx-js/loader": "^1.5.8",
     "@next/mdx": "^9.3.4",
     "@zeit/next-css": "^1.0.1",
